clang/test/BSC/Negative/InitAnalysis/init-struct-field-partial.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test BSCIR init analysis: read of uninitialized struct field.

struct Point { int x; int y; };

_Safe void test_partial_init(void) {
    struct Point p;
    p.x = 1;
    int val = p.y; // expected-error {{use of uninitialized value: `p.y`}}
}
